# lineFinder

./: .gitignore  CMakeLists.txt
src/: LineFinder.cpp  LineFinder.h
src/test/: main_test.cpp
